<resources>
    <string name="app_name">SimpleQuiz</string>
    <string name="action_nickname">Nickname</string>
    <string name="action_login">Login</string>
    <string name="action_quiz">Home</string>
    <string name="action_highscore">Highscores</string>

    <!-- Strings used for fragments for navigation -->
    <string name="signin_fragment_label">Anmeldung</string>
    <string name="quiz_fragment_label">Happy Quizzing</string>
    <string name="highscore_fragment_label">Highscores</string>


    <string name="status_text">Status</string>
    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="no_account_text">Noch keinen Account?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="forgot_password_text">Passwort vergessen?</string>
    <string name="reset_password_text">Passwort zurücksetzen</string>

    <string name="emailHint">E-Mail Adresse</string>
    <string name="pwHint">Passwort</string>
    <string name="pwReset">Passwort vergessen?</string>
    <string name="nicknameHint">Nickname</string>

    <string name="signUpTitle">Neuen Account anlegen</string>
    <string name="signUpMessage">Legen Sie E-Mail und Passwort für Ihren neuen Account fest.</string>
    <string name="signInTitle">Einloggen</string>
    <string name="signInMessage">Geben Sie E-Mail und Passwort an, um sich einzuloggen.</string>

    <string name="noValidInput">Bitte prüfen Sie Ihre Eingaben!</string>
    <string name="error">Ein unspezifizierter Fehler beim Login ist aufgetreten.</string>


    <string name="welcome">Aktueller Login-Status</string>

    <string name="loggedout">Bitte anmelden!</string>
    <string name="loggedin">Hallo %s</string>
    <string name="loggederror">Login-Fehler \n %s</string>
    <string name="processing">Anmeldung läuft ...</string>
    <string name="pwresetting">PW zurücksetzen.\nPrüfen Sie Ihre E-Mails.</string>

    <string name="buttonLogin">Login</string>
    <string name="buttonRegister">Neuer Account</string>


    <string name="forgotPw_title">Passwort zurücksetzen</string>
    <string name="forgotPw_msg">Geben Sie Ihre E-Mail Adresse an.</string>

    <string name="setNickname_title">Nickname</string>
    <string name="setNickname_msg">Geben Sie Ihren Nickname an.</string>

    <string name="notLoggedIn">Bitte melden Sie sich zunächst an!</string>

    <string name="required">Bitte einen gültigen Eintrag vornehmen!</string>


    <string name="wahr">wahr</string>
    <string name="falsch">falsch</string>
    <string name="playButton">play</string>
    <string name="punkte">Punkte</string>

    <string name="personalButton">Personal</string>
    <string name="globalButton">Global</string>

    <string name="gameOverTitle">Game Over</string>
    <string name="gameOverMessage">Sie haben %s Punkte erreicht!</string>

    <string name="saveHighscore">save and exit</string>
    <string name="dontSaveHighscore">exit</string>

</resources>