<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/quizFragment">
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.simplequiz.SignInFragment"
        android:label="@string/signin_fragment_label"
        tools:layout="@layout/fragment_signin" />
    <fragment
        android:id="@+id/highscoreFragment"
        android:name="com.example.simplequiz.HighscoreFragment"
        android:label="@string/highscore_fragment_label"
        tools:layout="@layout/fragment_highscore" />
    <fragment
        android:id="@+id/quizFragment"
        android:name="com.example.simplequiz.QuizFragment"
        android:label="@string/quiz_fragment_label"
        tools:layout="@layout/fragment_quiz" />
</navigation>